--- a/templates/pagosform.html
+++ b/templates/pagosform.html
@@ -64,17 +64,6 @@
             </li>
           </ul>
 
- <!--           <ul class="nav nav-stacked">
-            <li>
-              <a href="./hola">
-                <i class="fa fa-bus"></i>
-                blabla
-              </a>
-            </li>
-          </ul> -->
-
-
-          
           <hr>
           
         </div>
@@ -114,7 +103,7 @@
               <tr>
                 
                 <td class="tablaizq">Entrada</td>
-                <td class="tabladerecha">{{ini}}</td>
+                <td class="tabladerecha">{{reserva.InicioReserva}}</td>
                 
               </tr>
               
@@ -122,7 +111,7 @@
               <tr>
                 
                 <td class="tablaizq">Salida</td>
-                <td class="tabladerecha">{{fin}}</td>
+                <td class="tabladerecha">{{reserva.FinalReserva}}</td>
                 
               </tr>
  
@@ -142,7 +131,7 @@
               <tr>
                 
                 <td class="tablaizq">Nombre</td>
-                <td class="tabladerecha">{{nomb}}</td>
+                <td class="tabladerecha">{{reserva.Estacionamiento.Nombre}}</td>
                 
               </tr>
               
@@ -150,7 +139,7 @@
               <tr>
                 
                 <td class="tablaizq">Puesto asignado</td>
-                <td class="tabladerecha">{{puesto}}</td>
+                <td class="tabladerecha">{{reserva.Puesto}}</td>
                 
               </tr>
  
@@ -171,7 +160,7 @@
 				  <tr>
 				
 				<td class="tablaizq">Tarifa por hora</td>
-				<td class="tabladerecha">{{tarifa}} Bs</td>
+				<td class="tabladerecha">{{reserva.Estacionamiento.monto_tarifa}} Bs</td>
 				   
 				  </tr> 
 				</tbody>
@@ -181,7 +170,7 @@
 				<thead>
 				<tr>
 				<th class="tablaizq">TOTAL A PAGAR</th>
-				<th class="tabladerecha">{{monto}} Bs</th>
+				<th class="tabladerecha">{{reserva.Costo}} Bs</th>
 				</tr>
 				
 				</thead>
@@ -195,13 +184,98 @@
    	
    	 </div>
    	 
-		  <button type = "reset" class="btn btn-danger " id="cancel" style="width: 200px" onclick="mostrarAlerta()"><i class="fa fa-remove"></i> Cancelar reserva</button>        
-      
-           <a href="./pagosform"><button class="btn btn-primary" id="prepagar" style="width: 200px;"> Pagar reserva <i class="fa fa-arrow-circle-right"></i></button></a>
-           
-  		
                     
-</div>   		
+</div>
+
+<div class="col-md-6" id="pagos">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <div class="panel-title">
+                   <b><h3 class="titulo">SAGE Pagos</b></h3>		
+
+              </div>
+            </div>
+            <form action="./pagoconfirm"  id="formulario" method="POST">
+            {% csrf_token %}
+	        	
+            <table class="table table-striped">
+            
+	        <tbody>
+	        {% for field in form %}
+              {%if field.name = 'nombre'%}
+	        	   <tr><td><b><i class="fa fa-user"></i> Nombres del titular</b></td></tr>
+			            			<tr><td><input type="text" id="nombres" style="width:150px" class="form-control" name="{{field.name}}" for="id_{{field.name}}" onblur="validar_nombres()" onkeypress="ocultar_e4()" onclick="ocultar_e4()" class="form-control"><div class="alert alert-danger error_datos" id="error_nom" role="alert" style="display: none"><strong> * Introduzca nombre(s) válido(s)</strong>
+     							 	</td></tr>
+     			{%else%}
+     			{%if field.name = 'apellido'%}
+	        	  <tr><td><b><i class="fa fa-user"></i> Apellidos del titular</b></td></tr>
+			            			<tr><td><input type="text" id="apellidos" style="width:150px" onblur="validar_apellidos()" name="{{field.name}}" for="id_{{field.name}}" onkeypress="ocultar_e5()"onclick="ocultar_e5()" class="form-control" ><div class="alert alert-danger error_datos" id="error_ape" role="alert" style="display: none"><strong> * Introduzca apellido(s) válido(s)</strong>
+     							 	</td></tr>
+     			{%else%}
+     			{%if field.name = 'cedula'%}
+	        	 <tr><td><b><i class="fa fa-user"></i> Cédula del titular</b></td></tr>
+ 					<tr><td>    		
+        				<select id="tipo_ci" name="tipo_ci" style="width: 40px" onclick="ocultar_e7()" >
+		    				 <option value="">--</option>
+  							 <option value="1">V</option>
+  							 <option value="2">E</option>
+							 </select> -
+               			     <input type="text" id="cedula" onblur="validar_cedula()" onkeypress="ocultar_e6()" class="form-control" name="{{field.name}}" for="id_{{field.name}}">
+                <div class="alert alert-danger error_datos" id="error_ci" role="alert" style="display: none"><strong> * Introduzca un numero de cedula válida</strong></div>
+     								<div class="alert alert-danger error_tipos" id="tipos" role="alert" style="display: none"><strong> * Introduzca un tipo de cedula</strong></div> 
+     						 </td></tr>
+     						 
+     						 
+     						  <tr><td><b> Tipo Tarjeta</td></tr>
+					        	<tr><td>
+										<div class="row">
+												
+											<div class="col-md-4">							        	
+								        		<input type="radio" name="tarjetas" value="tvista" id="vista" onclick="ocultarError3()"> <img src="{% static 'css/vista.png'%}" width="60%"/>
+								        	</div>
+								        	<div class="col-md-4">							        	
+								        		<input type="radio" name="tarjetas" value="tmister" id="mister" onclick="ocultarError3()"><img src="{% static 'css/mister.png'%}" width="60%"  />
+								        	</div>
+								        	<div class="col-md-4">							        	
+							        			<input type="radio" name="tarjetas" value="txpress" id="xpress" onclick="ocultarError3()"><img src="{% static 'css/xpress.png'%}" width="60%"  />
+							        		</div>
+							        	</div>
+							        	<div class="row">
+							        	 <div class="alert alert-danger error3" id="error3" role="alert" style="display: none"><strong> * Debe elegir un tipo de tarjeta</strong></div>
+						        
+								        	</div>
+					       		 </td></tr>
+	        	  {%else%}
+	        	  {%if field.name = 'num_tarjeta'%}
+	        	  <tr><td><b><i class="fa fa-credit-card"></i> Número tarjeta</b></td></tr>
+			            			<tr><td><input class="form-control" name="{{field.name}}" for="id_{{field.name}}" type="text" id="cardnumber" style="width:150px" onblur="validar_numero()" onkeypress="ocultarError()" onclick="ocultarError(),validar_tipo()"><div class="alert alert-danger error" id="error1" role="alert" style="display: none"><strong> * Introduzca un numero de tarjeta válido</strong>
+     								 </td></tr>	    
+     			  {%else%}
+     			  {%if field.name = 'codigo_val'%}
+	        	  <tr><td><b><i class="fa fa-key"></i> Código validador </b></td></tr> 
+  				  <tr><td><input class="form-control" name="{{field.name}}" for="id_{{field.name}}" type="text"  id="cvv"  onblur="validar_cvv()" style="width: 50px"  onkeypress="ocultarError2()" onclick="ocultarError2()"><img class="cvv" src="{% static 'css/cvv.png'%}" width="35%" hspace="10px"/><div class="alert alert-danger error2" id="error2" role="alert" style="display: none"><strong> * Introduzca un CVV válido</strong></td></tr>				  
+               	  {%endif%}
+                  {%endif%}
+                  {%endif%}
+                  {%endif%}
+                  {%endif%}
+                  {%endfor%}
+             </table>
+               <div class="control-group" id="confirmacion" style="display:none">
+               <div class="controls">
+                <div class="alert alert-success" role="alert" style="display: block"><i class="fa fa-check"></i><b> Datos confirmados:</b> PROCESAR para finalizar la operación
+                <button type="submit" class="btn btn-success" id="confirmar">
+                      Procesar
+                    </button>
+                </div>
+     			</div>
+                </div>
+     	</form><br>
+     	<button class="btn btn-warning" id="boton_pago" onClick="validar_todo()">
+          Realizar Pago
+        </button>
+	</div> <!--cerrando col-med-6 --> 
+   			       
 </div> <!--cerrando col--> 
 
 
@@ -219,7 +293,6 @@
 	</div>	       
 </div>
 </div>
-
 
     <script type="text/javascript" src="{% static 'js/jquery-2.1.1.min.js'%}"></script>
     <script type="text/javascript" src="{% static 'js/jquery.easing.1.3.js'%}"></script>
@@ -249,6 +322,15 @@
 		document.getElementById('error_nom').style.display = 'block';
 		}
 	</script>	
+	
+	<script type="text/javascript">
+		function mostrarConfirmacion(){
+		document.getElementById('confirmacion').style.display = 'block';
+		document.getElementById('boton_pago').style.display = 'none';
+		
+		}
+	</script>	
+	
 	
 	<script type="text/javascript">
 		function ocultar_e4(){
@@ -381,31 +463,13 @@
 		}
 		
 	</script>
-		
+	
 	<script type="text/javascript">
-	 function setValue() {
-            
-            var progressBar = new ProgressBar("progresBarContainer", "progresBarFill", 0, 100);
-            var currentValue = 100;
-            var progressWidth = progressBar.GetWidth(currentValue);
-            
-            cardnumber.disabled=true;
-            cvv.disabled=true;
-            boton_pago.disabled=true;
-            vista.disabled=true;
-            mister.disabled=true;
-            xpress.disabled=true;
-            nombres.disabled=true;
-            apellidos.disabled=true;
-            cedula.disabled=true;
-            tipo_ci.disabled=true;    
-            mostrarBarra();
-            mostrarPanel();
-            progressBar.fillElement.animate({ width: progressWidth }, 100, null);
-            setTimeout(function(){ mostrar_mensaje(); }, 1000);
-            
+	 function disable2() {
+            confirmar.disabled=true; 
         }
 	</script>
+		
 	<script type="text/javascript">
 	 function disable() {
             
@@ -418,11 +482,10 @@
             nombres.disabled=true;
             apellidos.disabled=true;
             cedula.disabled=true;
-            tipo_ci.disabled=true;    
-    	          
+            tipo_ci.disabled=true;        
+            confirmar.disabled=false; 
         }
 	</script>
-	
 
 </body>
 </html>
