--- a/templates/pagoconfirm.html
+++ b/templates/pagoconfirm.html
@@ -81,7 +81,7 @@
 <div class="col-sm-10">
         
       <!-- column 2 --> 
-       <h3><i class="fa fa-bus"></i> Estacionamientos / Reserva / Pagos / Confirmacion</h3>  
+       <h3><i class="fa fa-bus"></i> Estacionamientos / Reserva / Pagos / Confirmación</h3>  
             
        <hr>
       
