Arreglando problema en las opciones de tarifa

--- a/templates/estacionamiento.html
+++ b/templates/estacionamiento.html
@@ -194,7 +194,7 @@
               <h4>Esquema Tarifario</h4>
 				
 				<SELECT size="1" NAME="tarifa" style="width: 222px; height:35px" >Tarifa
-				    <OPTION VALUE="none" SELECTED>{{estacionamiento.Tarifa}}
+				    <OPTION VALUE="none" SELECTED>---
 				    <OPTION VALUE="minutos">Minutos
 				    <OPTION VALUE="horas">Horas
 				    <OPTION VALUE="horaFraccion">Hora y Fraccion
