agregada opcion para el esquema tarifario de pago diferenciado por horas

--- a/templates/estacionamiento.html
+++ b/templates/estacionamiento.html
@@ -198,6 +198,7 @@
 				    <OPTION VALUE="minutos">Minutos
 				    <OPTION VALUE="horas">Horas
 				    <OPTION VALUE="horaFraccion">Hora y Fraccion
+				    <OPTION VALUE="difHoras">Diferenciado por Horas
 				</SELECT><br>
 			
               
