--- a/templates/estacionamientoReserva.html
+++ b/templates/estacionamientoReserva.html
@@ -11,6 +11,9 @@
     <link href="{% static 'css/bootstrap.min.css'%}" rel="stylesheet">
     <link href="{% static 'css/base.css'%}" rel="stylesheet">
     <link href="{% static 'css/font-awesome.min.css'%}" rel="stylesheet">
+    <link href="{% static 'datetimepicker/sample/bootstrap/css/bootstrap.min.css'%}" rel="stylesheet" media="screen">
+    <link href="{% static 'datetimepicker/css/bootstrap-datetimepicker.min.css'%}" rel="stylesheet" media="screen">
+    
     
    </head>
 
@@ -186,12 +189,14 @@
               <form action="./reserva" method="post" class="form form-vertical">
               {% csrf_token %}
               {% for field in form %}
-                <div class="control-group">
-                  <div class="controls">
-                    <input type="text" class="form-control" name="{{field.name}}" placeholder="{{field.label}}" for="id_{{field.name}}"><p>
-                    {{ field.errors }}
-                  </div>
-                </div> 
+                <div class="form-group">
+                	<div class="input-group date form_datetime" ">
+                    	<input type="text" class="form-control" name="{{field.name}}" placeholder="{{field.label}}" for="id_{{field.name}}"><p>
+                    	{{ field.errors }}
+                    	<span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
+                	</div>
+					<input type="hidden" id="dtp_input1" value="" /><br/>
+                </div>
               {% endfor %}
               {% if color = "red" %}
              
@@ -239,12 +244,23 @@
 
     <script type="text/javascript" src="{% static 'js/jquery-2.1.1.min.js'%}"></script>
     <script type="text/javascript" src="{% static 'js/bootstrap.min.js'%}"></script>
+    <script type="text/javascript" src="{% static 'datetimepicker/sample/jquery/jquery-1.8.3.min.js'%}" charset="UTF-8"></script>
+	<script type="text/javascript" src="{% static 'datetimepicker/sample/bootstrap/js/bootstrap.min.js'%}"></script>
+	<script type="text/javascript" src="{% static 'datetimepicker/js/bootstrap-datetimepicker.js'%}" charset="UTF-8"></script>
     
    	<script type="text/javascript">
 		function ocultare(){
 		document.getElementById('panerror').style.display = 'none';
 		}
 	</script>
+	<script type="text/javascript">
+    $(".form_datetime").datetimepicker({
+        format: "yyyy-mm-dd hh:ii",
+        autoclose: true,
+        todayBtn: true,
+        minuteStep: 1
+    });
+    </script>
 
 </body>
 
