Visibles los campos para valores picos

--- a/templates/estacionamiento.html
+++ b/templates/estacionamiento.html
@@ -212,15 +212,15 @@
                     	{{ field.errors }}
                     {%endif%}
           	        {%if field.name = 'pico_inicio'%}
-              			<input type="text" id="picoini" style="display:none" class="form-control" placeholder="{{field.label}}"name="{{field.name}}" for="id_{{field.name}}"><p>
+              			<input type="text" id="picoini" style="display:block" class="form-control" placeholder="{{field.label}}"name="{{field.name}}" for="id_{{field.name}}"><p>
                     	{{ field.errors }}
                     {%endif%}
                     {%if field.name = 'pico_fin'%}
-              			<input type="text" id="picofin" style="display:none" class="form-control" placeholder="{{field.label}}"name="{{field.name}}" for="id_{{field.name}}"><p>
+              			<input type="text" id="picofin" style="display:block" class="form-control" placeholder="{{field.label}}"name="{{field.name}}" for="id_{{field.name}}"><p>
                     	{{ field.errors }}
                     {%endif%}
                     {%if field.name = 'monto_pico'%}
-              			<input type="text" id="montopico" style="display:none" class="form-control" placeholder="{{field.label}}"name="{{field.name}}" for="id_{{field.name}}"><p>
+              			<input type="text" id="montopico" style="display:block" class="form-control" placeholder="{{field.label}}"name="{{field.name}}" for="id_{{field.name}}"><p>
                     	{{ field.errors }}
                     {%endif%}
                     
