--- a/templates/reportereservas.html
+++ b/templates/reportereservas.html
@@ -80,6 +80,15 @@
               </a>
             </li>
           </ul>
+          
+          <ul class="nav nav-stacked">
+            <li>
+              <a href="reportetasas">
+                <i class="fa fa-search"></i>
+                Reporde de tasa de reservas
+              </a>
+            </li>
+          </ul>
   
           <hr>
           
