--- a/templates/reporteingresos.html
+++ b/templates/reporteingresos.html
@@ -74,7 +74,16 @@
             <li>
               <a href="reportereservas">
                 <i class="fa fa-users"></i>
-                Reporde de reservas
+                Reporte de reservas
+              </a>
+            </li>
+          </ul>
+          
+          <ul class="nav nav-stacked">
+            <li>
+              <a href="reportetasas">
+                <i class="fa fa-search"></i>
+                Reporte de tasa de reservas
               </a>
             </li>
           </ul>
