--- a/templates/reportereservas.html
+++ b/templates/reportereservas.html
@@ -76,7 +76,16 @@
             <li>
               <a href="#">
                 <i class="fa fa-users"></i>
-                Reporde de reservas
+                Reporte de reservas
+              </a>
+            </li>
+          </ul>
+          
+          <ul class="nav nav-stacked">
+            <li>
+              <a href="reportetasas">
+                <i class="fa fa-search"></i>
+                Reporte de tasa de reservas
               </a>
             </li>
           </ul>
